// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with a link to Help 1`] = `
<div>
  <AppBar
    iconElementLeft={
      <img
        alt="logo"
        height="50px"
        src="ninja.svg"
      />
    }
    iconElementRight={
      <FlatButton
        disabled={false}
        fullWidth={false}
        href="/about.html"
        label="Help"
        labelPosition="after"
        labelStyle={Object {}}
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    }
    onTitleClick={[Function]}
    showMenuIconButton={true}
    title="Clipboard.ninja"
    zDepth={1}
  />
</div>
`;

exports[`renders with a link to Home 1`] = `
<div>
  <AppBar
    iconElementLeft={
      <img
        alt="logo"
        height="50px"
        src="ninja.svg"
      />
    }
    iconElementRight={
      <FlatButton
        disabled={false}
        fullWidth={false}
        href="/"
        label="Back"
        labelPosition="after"
        labelStyle={Object {}}
        onClick={[Function]}
        onKeyboardFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        primary={false}
        secondary={false}
      />
    }
    onTitleClick={[Function]}
    showMenuIconButton={true}
    title="Clipboard.ninja"
    zDepth={1}
  />
</div>
`;
